<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".SecondActivity"
    android:gravity="fill"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/btnCarrots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/carrots"
        android:onClick="btnClick"/>
    <Button
        android:id="@+id/btnOranges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/oranges"
        android:onClick="btnClick"/>

    <Button
        android:id="@+id/btnCelery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/celery"
        android:onClick="btnClick"/>
    <Button
        android:id="@+id/btnLimes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/limes"
        android:onClick="btnClick"/>
    <Button
        android:id="@+id/btnGrapes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/grapes"
        android:onClick="btnClick"/>
    <Button
        android:id="@+id/btnApples"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/apples"
        android:onClick="btnClick"/>
    <Button
        android:id="@+id/btnEggplant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/eggplant"
        android:onClick="btnClick"/>
    <Button
        android:id="@+id/btnLemons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/lemons"
        android:onClick="btnClick"/>
    <Button
        android:id="@+id/btnTomato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/tomato"
        android:onClick="btnClick"/>
    <Button
        android:id="@+id/btnBanana"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/banana"
        android:onClick="btnClick"/>
</LinearLayout>